--- a/index.html
+++ b/index.html
@@ -1,37 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>elegancia pura</title>
-    <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=[device-width], initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="soma.css">
 </head>
-
 <body>
-    <nav>
-        <ul id="menu-login">
-            <li><a href="">Home</a></li>
-            <li><a href="">Ajuda</a></li>
-            <li><a href="">Junte-se a nos</a></li>
-            <li><a href="">Entrar</a></li>
-        </ul>
-    </nav>
-    <nav id="menu-desktop">
-        <li><a href="">Dia dos membros</a></li>
-        <li><a href="">Lançamentos</a></li>
-        <li><a href="">Ofertas</a></li>
-        <li><a href="">Masculino</a></li>
-        <li><a href="">Femenino</a></li>
-        <li><a href="">Infantil</a></li>
-    </nav>
-    <nav id="menu-link">
-        <li><a href="">Ternos para casamento</a></li>
-        <li><a href="">Encontre seu terno ideal.</a></li>
-        <li><a href="">Saiba mais</a></li>
-    </nav>
-
-    <header>
-        <img src="img/img/Logo.jpg" alt="Logo da loja">
-    </header>
-</body>s
+   <form action="" class="soma">
+    <input type="text" name="n1" id="numero1">
+    <input type="text" name="n2" id="numero2">
+    <input type="submit" value="calcular" id="calcular">
+    <p id="resposta"></p>
+   </form>
+   <script src="soma.js"></script>
+</body>
+</html>
